<resources>
    <string name="app_logo">App Logo</string>
    <string name="app_name">فرا زمان</string>
    <string name="app_short_name">فرا زمان</string>
    <string name="app_description">سامانه فرا زمان در موبایل، به شما امکان می‌دهد سفرهای خود را پیگیری کنید، نقاط مسیر مهم را علامت‌گذاری کنید (ضبط صدا، عکس)، و آنها را با فرمت GPX برای استفاده بعدی با ابزارهای نقشه خیابان باز مانند JOSM صادر کنید.</string>
    <string-array name="test">
        <item>ایتم اول</item>
        <item>ایتم دوم</item>
        <item>ایتم سوم</item>
    </string-array>
 <string-array name="employer">
        <item> شهرداری رشت منطقه 1</item>
        <item> شهرداری رشت منطقه 2</item>
        <item> شهرداری رشت منطقه 3</item>
        <item> شهرداری رشت منطقه 4</item>
        <item> شهرداری رشت منطقه 5</item>
    </string-array>
 <string-array name="contract_number1">
     <item>58772-عمران کارون بختیاری</item>
    </string-array>
 <string-array name="contract_number2">
     <item>58788-سبز زیور</item>
    </string-array>
 <string-array name="contract_number3">
     <item>58790-دهکده سبزپوش</item>
    </string-array>
 <string-array name="contract_number4">
     <item>58796-دهکده سبزپوش</item>
    </string-array>
 <string-array name="contract_number5">
     <item>58804-سبز زیور</item>
    </string-array>
    <string-array name="violation_group">
        <item>فصل اول- نظافت عمومی دستی</item>
        <item>فصل دوم- نظافت عمومی نیمه مکانیزه و مکانیزه</item>
        <item>فصل سوم- تهیه مخازن فلزی ذخیره سازی</item>
        <item>فصل چهارم- تهیه مخازن غیر فلزی ذخیره سازی</item>
        <item>فصل پنجم- نگهداری مخازن ذخیره سازی پسماند عادی</item>
    </string-array>
    <string-array name="defect1">
        <item>نظافت نا مناسب دستی با عرض بیشتر از 15 تا 20  متر</item>
        <item>عدم نظافت دستی معابر با عرض بیشتر از 25 تا 45  متر</item>
        <item>نظافت نا مناسب دستی با عرض بیشتر از 25 تا 45  متر</item>
        <item>نظافت نا مناسب دستی با عرض تا 15 متر</item>
        <item>عدم حفظو نگهداری معابر</item>
        <item>عدم برف روبی دستی معابر</item>
    </string-array>
    <string-array name="defect2">
        <item>عدم امحا شعار نویسی و موارد مشابه</item>
        <item>عدم رعایت برنامه زمانبندی و ساعات کاری ماشین آلات جاروب</item>
        <item>عدم استفاده از نازل های آب پاش و انتشار گرد و غبار توسط ماشین جاروب </item>
        <item>تخطی از سرعت مجاز ماشین جاروب خیابانی </item>
        <item>عدم حفظو نگهداری معابر</item>
        <item>عدم برف روبی دستی معابر</item>
    </string-array>
    <string-array name="defect3">
        <item>عدم تهیه مخازن گالوانیزه و فلزی</item>
    </string-array>
    <string-array name="defect4">
        <item>عدم تهیه کارتن پلاست</item>
        <item>عدم تهیه مخازن پلی اتیلن </item>
    </string-array>
    <string-array name="defect5">
        <item>عدم نگهداری زیر مخزنی های نصب شده برای مخازن ثابت</item>
        <item>عدم نایلکس گذاری روزانه مخازن معابر </item>
        <item>عدم نظافت اطراف مخازن گالوانیزه و پلی اتیلنی </item>
        <item>عدم نگهداری مخزن متحرک گالوانیزه چهار چرخ</item>
        <item>عدم نگهداری مخزن متحرک پلب اتیلنی چهار چرخ</item>
    </string-array>
    <string-array name="season_of_price1">
        <item>فصل اول- نظافت عمومی دستی (سنتی)-نظافت دستی</item>
    </string-array>
    <string-array name="season_of_price2">
        <item>نقص صورت گرفته انتخابی فصل و آیتم فهرست بها مرتبط ندارد</item>

    </string-array>
    <string-array name="season_of_price3">
        <item>فصل سوم - تهیه مخازن فلزی ذخیره سازی - مخلوط با مخازن متحرک</item>

    </string-array>
    <string-array name="season_of_price4">
        <item>نقص صورت گرفته انتخابی فصل و آیتم فهرست بها مرتبط ندارد</item>

    </string-array>
    <string-array name="season_of_price5">
        <item>نقص صورت گرفته انتخابی فصل و آیتم فهرست بها مرتبط ندارد</item>

    </string-array>
    <string-array name="price_list3">
        <item>030102 - مخزن متحرک گالوانیزه دارای چهار چرخ با درپوش با ظرفیت 660 لیتر پسماند عادی</item>

    </string-array>
    <string-array name="price_list1">
        <item>010102 - نظافت دستی معابر با عرض بیشتر از 15 تا 25 متر</item>

    </string-array>
    <string name="tracklogger">واقعه‌نگار مسیر</string>
    <string name="tracklogger_waiting_gps">در انتظار ثابت‌شدن GPS برای فعال‌سازی دکمه‌ها...</string>
    <string name="tracklogger_voicerec_title">ضبط صدا</string>
    <string name="tracklogger_voicerec_text">در حال ضبط (0) ثانیه فایل صوتی</string>
    <string name="tracklogger_voicerec_stop">توقف</string>
    <string name="tracklogger_btnBack">عقب</string>
    <string name="tracklogger_tracked">مسیر ثبت شده:</string>
    <string name="tracklogger_gps_disabled">GPS غیرفعال</string>
    <string name="tracklogger_gps_disabled_hint">‏GPS غیرفعال است. آن را فعال می‌کنید؟</string>
    <string name="tracklogger_choose_gallery_camera">گالری تصاویر یا دوربین؟</string>
    <string name="tracklogger_camera">با دوربین عکس بگیر</string>
    <string name="tracklogger_gallery">انتخاب عکس از گالری</string>
    <string name="wplist">لیست نقاط بین‌راهی</string>
    <string name="wplist_latitude">عرض جغرافیایی:</string>
    <string name="wplist_longitude">طول جغرافیایی:</string>
    <string name="wplist_elevation">ارتفاع:</string>
    <string name="wplist_accuracy">دقت:</string>
    <string name="wplist_compass">جهت قطب‌نما:</string>
    <string name="wplist_compass_accuracy">دقت قطب‌نما:</string>
    <string name="trackmgr_contextmenu_export">دریافت خروجی</string>
    <string name="trackmgr_contextmenu_share">اشتراک گذاری</string>
    <string name="trackmgr">مدیریت مسیرها</string>
    <string name="trackmgr_tracklist">ماموریت ها</string>
    <string name="trackmgr_waypoints_count">نقاط بین‌راهی:</string>
    <string name="trackmgr_trackpoints_count">نقاط مسیر:</string>
    <string name="trackmgr_empty">شما هیچ مسیری ندارید.</string>
    <string name="trackmgr_newtrack_hint">برای ضبط یک رد تازه لمس کنید</string>
    <string name="trackmgr_newtrack_error">امکان ساخت مسیر جدید وجود ندارد: {0}</string>
    <string name="trackmgr_continuetrack_hint">هم‌اکنون در حال ضبط <b>مسیر#{0}</b> هستید\nبرای ادامه آن را از لیست انتخاب کنید</string>
    <string name="trackmgr_contextmenu_stop">توقف ماموریت</string>
    <string name="trackmgr_contextmenu_resume">ادامهٔ ماموریت</string>
    <string name="trackmgr_contextmenu_delete">حذف</string>
    <string name="trackmgr_contextmenu_osm_upload">اتمام ماموریت</string>
    <string name="trackmgr_contextmenu_display">نمایش</string>
    <string name="trackmgr_contextmenu_details">جزئیات</string>
    <string name="trackmgr_contextmenu_title">مسیر #{0}</string>
    <string name="trackmgr_delete_confirm">مسیر پاک شود؟</string>
    <string name="trackmgr_deleteall_confirm">تمامی مسیرها پاک خواهد شد. آیا مطمئن هستید؟</string>
    <string name="trackmgr_exporting">در حال خروجی‌گرفتن از مسیر #{0}...</string>
    <string name="trackmgr_exporting_prepare">در حال آماده‌سازی فایل خروجی...</string>
    <string name="trackmgr_export_error">امکان تهیهٔ خروجی از مسیر: {0} وجود ندارد</string>
    <string name="trackmgr_exportall_confirm">از تمامی مسیرها خروجی تهیه خواهد شد که امکان دارد زمان زیادی طول بکشد. آیا مطمئن هستید؟</string>
    <string name="trackmgr_prepare_for_share_error">امکان پردازش رد وجود ندارد: {0}</string>
    <string name="trackdetail_name">نام</string>
    <string name="trackdetail">جزئیات مسیر</string>
    <string name="trackdetail_startdate">زمان شروع:</string>
    <string name="trackdetail_enddate">زمان خاتمه:</string>
    <string name="trackdetail_startloc">شروع در:</string>
    <string name="trackdetail_endloc">خاتمه در:</string>
    <string name="trackdetail_exportdate">خروجی:</string>
    <string name="trackdetail_osm_upload_date">در OpenStreetMap بارگذاری شد:</string>
    <string name="trackdetail_btn_export">خروجی در قالب GPX</string>
    <string name="trackdetail_export_notyet">(هنوز خروجی نگرفته‌اید)</string>
    <string name="trackdetail_osm_upload_notyet">(هنوز بارگذاری نشده است)</string>
    <string name="trackdetail_export_display">نمایش</string>
    <string name="trackdetail_description">توضیح</string>
    <string name="trackdetail_tags">برچسب (با کاما جدا شوند)</string>
    <string name="trackdetail_description_mandatory">باید توضیحی بنویسید</string>
    <string name="osm_visibility_private">خصوصی</string>
    <string name="osm_visibility_public">عمومی</string>
    <string name="osm_visibility_trackable">قابل ردیابی</string>
    <string name="osm_visibility_identifiable">قابل‌شناسایی</string>
    <string name="osm_upload">بارگذاری در OpenStreetMap</string>
    <string name="osm_upload_ok">ذخیره و بارگذاری</string>
    <string name="osm_upload_custom">آپلود به سرور</string>
    <string name="osm_upload_tmpfile_failed">تهیهٔ خروجی مسیر بر روی فایل موقت ناموفق بود</string>
    <string name="osm_upload_oauth_failed">تأیید حساب کاربری در OSM ناموفق بود</string>
    <string name="osm_upload_sending">در حال ارسال مسیر #{0}...</string>
    <string name="osm_upload_waiting_response">منتظر پاسخ از سرور OpenStreetMap...</string>
    <string name="osm_upload_error">بارگذاری مسیر با خطا مواجه گردید</string>
    <string name="osm_upload_bad_response">سرور OSM یک خطا برگرداند: {(0)} پیغام {1}</string>
    <string name="osm_upload_unauthorized">خطای دسترسی. مایلید اطلاعات ورود به حساب کاربری OpenStreetMap از روی دستگاه پاک شود؟</string>
    <string name="osm_upload_sucess">بارگذاری در OpenStreetMap موفقیت‌آمیز بود</string>
    <string name="gpsstatus_record_voicerec">ضبط صدا</string>
    <string name="gpsstatus_record_stillimage">گرفتن عکس</string>
    <string name="gpsstatus_record_textnote">یادداشت متنی</string>
    <string name="waypoint_name_label">Waypoint Name/text</string>
    <string name="waypoint_name_hint">Enter waypoint name</string>
    <string name="edit_waypoint_bt_preview">Open file</string>
    <string name="edit_waypoint_bt_save">Save</string>
    <string name="edit_waypoint_bt_delete">Delete</string>
    <string name="edit_waypoint_bt_cancel">Cancel</string>
    <string name="delete_waypoint_confirm_dialog_title">Delete waypoint</string>
    <string name="delete_waypoint_confirm_dialog_msg">Delete this waypoint?</string>
    <string name="delete_waypoint_confirm_bt_ok">Delete</string>
    <string name="delete_waypoint_confirm_bt_cancel">Cancel</string>
    <string name="menu_settings">تنظیمات</string>
    <string name="menu_waypointlist">نقاط بین‌راهی</string>
    <string name="menu_about">دربارهٔ ما</string>
    <string name="menu_displaytrack">نمایش مسیر</string>
    <string name="mission_receive_title">دریافت برنامه کاری</string>
    <string name="mission_visit_date_label">تاریخ بازدید</string>
    <string name="mission_organ_label">محدوده کاری</string>
    <string name="mission_contract_label">قرارداد</string>
    <string name="mission_select_organ_hint">انتخاب کارفرما</string>
    <string name="mission_select_contract_hint">انتخاب قرارداد</string>
    <string name="mission_receive_submit">دریافت برنامه کاری</string>
    <string name="supervisor_start_visit">شروع بازدید</string>
    <string name="supervisor_home_warning_start_visit">برای ثبت تخلف، ابتدا بازدید را شروع کنید</string>
    <string name="supervisor_reports">گزارش‌ها</string>
    <string name="supervisor_notifications">اعلان‌ها</string>
    <string name="supervisor_profile">پروفایل</string>
    <string name="daily_plan_visit_not_started_title">بازدید شروع نشده!</string>
    <string name="daily_plan_show_on_map">نمایش روی نقشه</string>
    <string name="end_mission_title">اتمام و بارگذاری ماموریت</string>
    <string name="end_mission_message_remove">با تایید این مرحله، ماموریت از فهرست شما حذف خواهد شد.</string>
    <string name="end_mission_message_confirm">آیا از اتمام ماموریت خود مطمئن هستید؟</string>
    <string name="end_mission_confirm">تایید و بارگذاری</string>
    <string name="end_mission_cancel">لغو</string>
    <string name="supervisor_history_empty">تخلفی برای این تاریخ ثبت نشده است</string>
</resources>